add missing cide

--- a/strings/1.html
+++ b/strings/1.html
@@ -14,7 +14,7 @@
             }
             console.log(str);
         }
-        (MyFunction("ddd", 5));
+        MyFunction("ddd", 5);
     </script>
 </body>
 
