--- a/solutions/index.html
+++ b/solutions/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <script src="A1.js"></script>
+    <script src="solution.js"></script>
 </head>
 <body>
     Hey, JS inside here! Open console, please.
