--- a/js-constructions/index.html
+++ b/js-constructions/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <script>
-        // 1. ImmutableArray
+        // 1. ImmutableArray        
         let initArray = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
         let ImmutableArray = {
             push(arr, el) {
@@ -78,16 +78,31 @@
             },
 
         }
-        console.log('1. ImmutableArray')
-        console.log('push', ImmutableArray.push(initArray, 55))
-        console.log('pop', ImmutableArray.pop(initArray))
-        console.log('shift', ImmutableArray.shift(initArray))
-        console.log('unshift', ImmutableArray.unshift(initArray, 10))
-        console.log('remove', ImmutableArray.remove(initArray, 1))
-        console.log('insert', ImmutableArray.insert(initArray, 100, 1))
-        console.log('swapWithPrevious', ImmutableArray.swapWithPrevious(initArray, 10))
-        console.log('swapWithNext', ImmutableArray.swapWithNext(initArray, 10))
-        console.log('initArray', initArray)
+        // console.log('1. ImmutableArray')
+        // console.log('push', ImmutableArray.push(initArray, 55))
+        // console.log('pop', ImmutableArray.pop(initArray))
+        // console.log('shift', ImmutableArray.shift(initArray))
+        // console.log('unshift', ImmutableArray.unshift(initArray, 10))
+        // console.log('remove', ImmutableArray.remove(initArray, 1))
+        // console.log('insert', ImmutableArray.insert(initArray, 100, 1))
+        // console.log('swapWithPrevious', ImmutableArray.swapWithPrevious(initArray, 10))
+        // console.log('swapWithNext', ImmutableArray.swapWithNext(initArray, 10))
+        // console.log('initArray', initArray)
+
+        // 2. intersection(arr1, arr2)
+        function intersection(arr1, arr2) {
+            let resultArr = [];
+            arr1.forEach(function (elem1) {
+                arr2.forEach(function (elem2) {
+                    if (elem1 == elem2 && resultArr.indexOf(elem1) == -1) {
+                        resultArr.push(elem1);
+                    }
+                })
+            })
+            return resultArr.sort(function (a, b) { return a - b });
+        }
+        // console.log('2. intersection(arr1, arr2)')
+        // console.log('intersection', intersection([2, 1, 3, 1], [1, 3, 5]))
     </script>
 </body>
 
