--- a/js-constructions/index.html
+++ b/js-constructions/index.html
@@ -104,6 +104,13 @@
         // console.log('2. intersection(arr1, arr2)')
         // console.log('intersection', intersection([2, 1, 3, 1], [1, 3, 5]))
 
+        // 3. vowelCount(`Hello WORLD!`)
+        function vowelCount(str) {
+            return str.match(/[aeiouy]/gi).length;
+        }
+        // console.log('3. vowelCount(`Hello WORLD!`)')
+        // console.log('3. vowelCount', vowelCount(`Hello WORLD!`))
+
         // 4. toEvenOddString([1, 3, 2, 8, 13, 7, 4])
         function toEvenOddString(arr) {
             let evenArr = [],
