--- a/js-constructions/index.html
+++ b/js-constructions/index.html
@@ -126,6 +126,68 @@
         }
         // console.log('4. toEvenOddString([1, 3, 2, 8, 13, 7, 4])')
         // console.log('result', toEvenOddString([1, 3, 2, 8, 13, 7, 4]))
+
+        // 6. Complex task with arrays
+        let monday = [
+            {
+                'name': 'Write a tutorial',
+                'duration': 180
+            },
+            {
+                'name': 'Some web development',
+                'duration': 120
+            }
+        ]
+
+        let tuesday = [
+            {
+                'name': 'Keep writing that tutorial',
+                'duration': 240
+            },
+            {
+                'name': 'Some more web development',
+                'duration': 180
+            },
+            {
+                'name': 'A whole lot of nothing',
+                'duration': 240
+            }
+        ]
+
+        let tasks = [monday, tuesday];
+        const TIME_RATE = 15;
+        let totalRate = 0;
+        // 6.1 Combine tasks array of objects from two days
+        tasks.reduce(function (prevItem, currentItem) {
+            for (let obj of currentItem) {
+                prevItem.push(obj)
+            }
+            tasks = prevItem;
+        })
+        // console.log('6.1. Combine tasks array', tasks)
+
+        // 6.2 Remake tasks duration from minutes to hours
+        tasks.map(function (el) {
+            el.duration = el.duration / 60;
+        })
+        // console.log('6.2. Remake tasks duration', tasks)
+
+        // 6.3 Filter tasks where task duration > 2 hours
+        tasks.filter(function (el, index) {
+            if (el.duration <= 2) {
+                tasks.splice(index, 1)
+            }
+        })
+        // console.log('6.3. Filter tasks duration', tasks)
+
+        // 6.4-6.6 Calculate tasks rate. Calculate total tasks rate and format output value 
+        tasks.map(function (el) {
+            el['rate'] = el.duration * TIME_RATE;
+            totalRate += el['rate'];
+        })
+        totalRate += '$';
+        // console.log('6.4. Calculate tasks rate', tasks)
+        // console.log('6.5-6.6. Calculate total tasks rate', totalRate)
     </script>
 </body>
 
