--- a/js-constructions/index.html
+++ b/js-constructions/index.html
@@ -45,28 +45,16 @@
                 }
 
                 let arrayCopy = arr.slice(),
-                    amountOfElems = arr.length,
-                    currentEl,
-                    prevEl,
-                    nextEl;
+                    amountOfElems = arr.length;
 
                 if (index > amountOfElems - 1) {
                     index = amountOfElems - 1;
-                    currentEl = arr[index];
-                    prevEl = arr[index - 1];
-                    nextEl = arr[0];
-                    ckeckSwapDirection(index, index - 1, 0, currentEl, prevEl, nextEl)
+                    ckeckSwapDirection(index, index - 1, 0, arr[index], arr[index - 1], arr[0])
                 } else if (index <= 0) {
                     index = 0;
-                    currentEl = arr[index];
-                    prevEl = arr[amountOfElems - 1];
-                    nextEl = arr[index + 1];
-                    ckeckSwapDirection(index, amountOfElems - 1, index + 1, currentEl, prevEl, nextEl)
+                    ckeckSwapDirection(index, amountOfElems - 1, index + 1, arr[index], arr[amountOfElems - 1], arr[index + 1])
                 } else {
-                    currentEl = arr[index];
-                    prevEl = arr[index - 1];
-                    nextEl = arr[index + 1];
-                    ckeckSwapDirection(index, index - 1, index + 1, currentEl, prevEl, nextEl)
+                    ckeckSwapDirection(index, index - 1, index + 1, arr[index], arr[index - 1], arr[index + 1])
                 }
                 return arrayCopy;
             },
@@ -89,6 +77,8 @@
         // console.log('swapWithNext', ImmutableArray.swapWithNext(initArray, 10))
         // console.log('initArray', initArray)
 
+
+
         // 2. intersection(arr1, arr2)
         function intersection(arr1, arr2) {
             let resultArr = [];
@@ -104,12 +94,16 @@
         // console.log('2. intersection(arr1, arr2)')
         // console.log('intersection', intersection([2, 1, 3, 1], [1, 3, 5]))
 
+
+
         // 3. vowelCount(`Hello WORLD!`)
         function vowelCount(str) {
             return str.match(/[aeiouy]/gi).length;
         }
         // console.log('3. vowelCount(`Hello WORLD!`)')
         // console.log('3. vowelCount', vowelCount(`Hello WORLD!`))
+
+
 
         // 4. toEvenOddString([1, 3, 2, 8, 13, 7, 4])
         function toEvenOddString(arr) {
@@ -126,6 +120,47 @@
         }
         // console.log('4. toEvenOddString([1, 3, 2, 8, 13, 7, 4])')
         // console.log('result', toEvenOddString([1, 3, 2, 8, 13, 7, 4]))
+
+
+
+        // 5. snail(arr)
+        let snailArr = [
+            [1, 2, 3, 4, 5],
+            [12, 13, 14, 15, 6],
+            [11, 10, 9, 8, 7]
+        ]
+        let resultArr = [];
+        
+        function snail(arr) {
+            let amountOfElems = arr[0].length;
+
+            for (let i = 0; i < amountOfElems; i++) {
+                resultArr.push(arr[0].shift());
+            }
+            arr.shift();
+            turnArray(arr)
+        }
+        
+        function turnArray(arr) {
+            if (arr.length) {
+                let n = arr.length - 1,
+                    m = arr[0].length - 1,
+                    newArray = [];
+
+                for (let i = 0; i <= m; i++) {
+                    let tempArr = [];
+                    for (let j = 0; j <= n; j++) {
+                        tempArr.unshift(arr[n - j][m - i])
+                    }
+                    newArray.push(tempArr)
+                }
+            snail(newArray)
+            }
+        }
+
+        snail(snailArr)
+        console.log(resultArr)
+
 
         // 6. Complex task with arrays
         let monday = [
