--- a/Hometask/1.html
+++ b/Hometask/1.html
@@ -57,15 +57,15 @@
                     if (i == index) {
                         continue;
                     } else {
-                        resArr[i] = arr[i]
+                        resArr.push(arr[i]);
                     }
                 }
                 return resArr;
             }
         };
-        // var arr1 = [1, 2, 3, 4];
-        // alert(ImmutableArray.myRemove(arr1, 1));
-        // alert(arr1);
+        var arr1 = [1, 2, 3, 4];
+        alert(ImmutableArray.myRemove(arr1, 1));
+        alert(arr1);
     </script>
 </body>
 
