--- a/Hometask/1.html
+++ b/Hometask/1.html
@@ -106,9 +106,9 @@
                 return resArr;
             }
         };
-        var arr1 = [1, 2, 3, 4];
-        alert(ImmutableArray.swapWithNext(arr1, 1));
-        alert(arr1);
+        //var arr1 = [1, 2, 3, 4];
+        //alert(ImmutableArray.swapWithNext(arr1, 1));
+        //alert(arr1);
     </script>
 </body>
 
