--- a/numbers/1.html
+++ b/numbers/1.html
@@ -5,6 +5,8 @@
 </head>
 
 <body>
+    <!-- Написать функцию, к-я принимает первый аргумент - число, второй вргумент - степень.
+Возвращает число возведенное в заданную степень. -->
 
     <script>
         function MyFunction(a, b) {
