--- a/numbers/2.html
+++ b/numbers/2.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-
+    <!-- Написать функцию, к-я выводит в консоль/html-документ таблицу умножения. -->
     <script>
         function mulTable() {
             var res = 0;
@@ -16,7 +16,7 @@
                 }
             }
         }
-        (mulTable());
+        mulTable();
     </script>
 </body>
 
