--- a/numbers/3.html
+++ b/numbers/3.html
@@ -5,7 +5,8 @@
 </head>
 
 <body>
-
+    <!-- Модифицировать функцию вывода таблицы умножения таким образом, чтобы она принимала на вход
+два параметра: 1-й число, второй - кол-во строк таблицы умножения. multiTable(2, 3); -->
     <script>
         function mulTable(a, b) {
             var res = 0;
@@ -17,7 +18,7 @@
                 }
             }
         }
-        (mulTable(9, 9));
+        mulTable(9, 9);
     </script>
 </body>
 
