--- a/numbers/5.html
+++ b/numbers/5.html
@@ -5,6 +5,9 @@
 </head>
 
 <body>
+    <!-- Напишите функцию doubleNum, которая возвращает переданное ей число увеличенное вдвое, 
+если число не состоит из "двойников" - в таком случае функция просто возвращает исходное число. 
+"Двойники" - числа состоящие из двух одинаковых чисел, например 77, 22, 200200, 4343. -->
 
     <script>
         function func(a) {
