--- a/strings/1.html
+++ b/strings/1.html
@@ -5,7 +5,8 @@
 </head>
 
 <body>
-
+    <!-- Написать функцию, к-я принимает первый аргумент - строку, второй вргумент - кол-во повторений.
+Возвращает строку в к-й содержится исходная строка заданное кол-во раз.-->
     <script>
         function MyFunction(a, b) {
             var str = '';
