--- a/strings/2.html
+++ b/strings/2.html
@@ -5,7 +5,9 @@
 </head>
 
 <body>
-
+    <!-- Напишите функцию ucFirst(str), которая возвращает строку str с заглавным первым символом, например:
+ucFirst("вася") == "Вася";
+ucFirst("") == ""; // нет ошибок при пустой строке -->
     <script>
         //start only for first element
         function ucFirst(a) {
