--- a/strings/4.html
+++ b/strings/4.html
@@ -5,7 +5,8 @@
 </head>
 
 <body>
-
+    <!-- Написать функцию turnMeBaby, к-я принимает один аргумент - исходную строку 
+и возвращает строку перевернутую задом на перед. -->
     <script>
         function turnMeBaby(str) {
             var res = "";
