--- a/strings/5.html
+++ b/strings/5.html
@@ -5,6 +5,9 @@
 </head>
 
 <body>
+    <!--Реализовать функцию, которая принимает на вход строку и возвращает 
+число слов в этой строке. Слова разделены пробелами (и, возможно, не одним), 
+а знаки пунктуации не учитываются. Допускается только посимвольный перебор строки. -->
 
     <script>
         function myFunction(str) {
