--- a/strings/3.html
+++ b/strings/3.html
@@ -5,6 +5,9 @@
 </head>
 
 <body>
+    <!-- Создайте функцию truncate(str, maxlength), которая проверяет длину строки str, 
+и если она превосходит maxlength – заменяет конец str на "...", так чтобы ее длина стала 
+равна maxlength. -->
 
     <script>
         function truncate(str, maxlength) {
