--- a/Hometask/6.html
+++ b/Hometask/6.html
@@ -70,13 +70,23 @@ let tasks = [monday, tuesday]; -->
 
         //Перетворити попередній масив в масив, в якому тривалість тасок перетворена з хвилин в години
 
-        tasks = tasks.map(function(i) {
+        /*tasks = tasks.map(function(i) {
             for (key in i) {
                 if (key == 'duration') {
-                    return (i[key] = i[key] / 60);
+                     return (i[key] = i[key] / 60);
+                }
+            }
+        });*/
+
+        //Вибрати тільки ті таски, тривалість яких зайняла більше 2 годин
+        tasks = tasks.filter(function(i) {
+            for (key in i) {
+                if (key == 'duration') {
+                    return (i[key] > 2);
                 }
             }
         });
+
         alert(tasks);
     </script>
 </body>
