--- a/Hometask/6.html
+++ b/Hometask/6.html
@@ -98,10 +98,8 @@ let tasks = [monday, tuesday]; -->
         //console.log(tasksTime);
 
         // Відформатувати отримане число у вигляді $<amount>;
-        let amount = tasksTime.map(function(i) {
-            return ("$" + i);
-        });
-        //console.log(amount);
+        let amount = '$' + tasksTime;
+        console.log(amount);
     </script>
 </body>
 
