--- a/JS_hometask.html
+++ b/JS_hometask.html
@@ -50,8 +50,9 @@
    
    
 	//5. 
-		var count = 0;
+		
         function f(str){
+            var count = 0;
 			str = str + " ";
 			for(var i = 0; i < str.length; i++){
 				if((str[i] != " ")&&(str[i + 1] == " ")){
@@ -79,8 +80,8 @@
 	
 	//7.
 		function multiplicationTable(){
-			for(i = 1; i <= 9; i++){
-				for(j = 1; j <= 10; j++){
+			for(var i = 1; i <= 9; i++){
+				for(var j = 1; j <= 10; j++){
 					document.write(i + "*" + j + "=" + i * j + "<br>");
 				}
 			document.write("======<br>");	
@@ -91,7 +92,7 @@
 	
 	//8.
 		function multiply(a, b){
-			for(i = 1; i <= b; i++){
+			for(var i = 1; i <= b; i++){
 					document.write(a + "*" + i + "=" + a * i + "<br>");	
 			}
 		}
@@ -101,7 +102,7 @@
 	//9.
 		function doubleNum(a){
 			a = a.toString();
-			for(i = 0; i < a.length/2; i++){
+			for(var i = 0; i < a.length/2; i++){
 				if(a[i] != a[a.length/2 + i]){
 					a = a * 2;
 					break	
