--- a/10.03/index.html
+++ b/10.03/index.html
@@ -5,6 +5,8 @@
 <head>
     <script src="task1.js"></script>
     <script src="task2.js"></script>
+    <script src="task3.js"></script>
+
 </head>
 
 <body>
